# mojogl-generator

./: .gitignore  LICENSE  PLAN.md  README.md  hello.py  pyproject.toml
.github/workflows/: pr-preview.yml  release.yml  test.yml
src/mojogl/: __init__.mojo
src/mojogl/examples/: __init__.mojo
src/mojogl_generator/: __init__.py  cli.py  registry.py  types.py
tests/: __init__.py  test_generator.py
