[project]
name = "mojogl-generator"
version = "0.1.0"
description = "OpenGL binding generator for Mojo"
readme = "README.md"
authors = [
    { name = "MojoGL Contributors" }
]
requires-python = ">=3.9"
dependencies = []
keywords = ["opengl", "mojo", "bindings", "graphics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0", 
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mojogl-generate = "mojogl_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "B", "A", "C4", "SIM"]
ignore = [
    "E501",   # Line too long
    "S101",   # Assert used (OK in tests)
    "S314",   # XML parsing (we parse trusted Khronos registry)
    "T201",   # Print found (OK in CLI tools)
    "S310",   # URL open audit (we download from trusted Khronos URL)
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
